<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    tools:context=".propos">

    <RelativeLayout
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/propos"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/pers1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc">

        <RelativeLayout
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/sush" />

        </RelativeLayout>

        <TextView
            android:id="@+id/nom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img1"
            android:layout_centerHorizontal="true"
            android:text="@string/nom1"
            android:textColor="@color/white"
            android:textSize="32sp" />


        <TextView
            android:id="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nom1"
            android:layout_centerHorizontal="true"
            android:text="@string/pers1"
            android:textAllCaps="true"
            android:textColor="@color/address"
            android:textSize="14sp" />


        <RelativeLayout
            android:id="@+id/pers2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info1"
            android:layout_alignParentBottom="true"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_border">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/adrien" />

            </RelativeLayout>

            <TextView
                android:id="@+id/nom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img2"
                android:layout_centerHorizontal="true"
                android:text="@string/nom2"
                android:textColor="@color/white"
                android:textSize="32sp" />


            <TextView
                android:id="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nom2"
                android:layout_centerHorizontal="true"
                android:text="@string/pers2"
                android:textAllCaps="true"
                android:textColor="@color/address"
                android:textSize="14sp" />




        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>